--- a/style.css
+++ b/style.css
@@ -70,10 +70,7 @@ h5{
     cursor: pointer;
 }
 /*======Zoek een verhaal===== */
-section{
-    background-color: ;
-    
-}
+
 
 section>a{
     display: flex;
@@ -149,6 +146,7 @@ form:first-of-type{
   
 }
 form.index{
+    display: none;
     height: 0;
     overflow: hidden;
     opacity: 0;
@@ -254,6 +252,7 @@ tutorial van https://codersblock.com/blog/checkbox-trickery-with-css/ =======*/
 
 input:checked+label {
     transition: background-color .2s;
+    
     background-color: #F1F1F1;
 }
 
@@ -282,6 +281,7 @@ input:checked+label::before {
 
 #klik[type=checkbox]:checked~form{
     position: absolute;
+    display: block;
     opacity: 1;
     top: 0;
     left: 0;
@@ -297,6 +297,7 @@ form footer:first-of-type{
     justify-content: center;
     padding: 35px 0;
     background-color: #F7F4F1;
+    border-bottom-right-radius: 10px;
 }
 /*Button Formulier */
 #zoek {
@@ -316,6 +317,7 @@ form footer:first-of-type{
 
 /*========Sorteer======*/
 #sort{
+    max-width: 40em;
     background-color: #f7f7f6;
     margin-top: 3rem;
     margin-left: 15px;
@@ -327,18 +329,23 @@ form footer:first-of-type{
     border-top-right-radius: 10px;
 }
 #sort input{
+    
     position: absolute;
     left: -99999px;
 }
-#sort label{
+form>label{
+    display: flex;
+    justify-content: center;
     background-color: #f7f7f6;
-    cursor: pointer;
+    width: 33%;
 }
-#sort input[type=radio]:checked~label{
+
+form input[type=radio]:checked+label{
     background-color: #FFFFFF;
 }
 /*======Resultaten======*/
 main{
+    padding-top: 1.5em;
     display: flex;
     flex-wrap: wrap;
     background-color: #f1f1f1;
@@ -350,7 +357,7 @@ article{
     flex-wrap: wrap;
     justify-content: space-between;
     height: 12rem;
-    max-width: 360px;
+    max-width: 100vw;
 }
 article h3{
     padding:0 ;
@@ -361,11 +368,12 @@ article header{
     background-color: rgba(255,255,255,.96);
     display: flex;
     flex-wrap: wrap;
-    margin-right: 20px;
+    margin-right: 1.5em;
     margin-left: 20px;
     border-radius: 10px;
     position: relative;
     bottom: 80px;
+    max-width: 330px;
 }
 article ul{
     display: flex;
@@ -386,6 +394,12 @@ article li{
     list-style: none;
     padding-right: 25px;
 }
+article li:nth-child(3){
+    padding-bottom: 15px;;
+}
+article li:nth-child(4){
+    padding-bottom: 15px;
+}
 article li:last-of-type{
     font-size: 2.4em;
     font-weight: 700;
@@ -394,10 +408,16 @@ article li:last-of-type{
     top: 0;
 }
 article footer{
-    margin-right: 20px;
+    margin-right: 2em;
+    
 }
 article>footer img{
     border-radius: 10px;
     width: 310px;
     height: 160px;
+}
+@media only screen and (min-width: 600px) {
+    article {max-width: 33em;}
+    
+    
 }
